--- a/estate-complexes-redesign/css/global.scss
+++ b/estate-complexes-redesign/css/global.scss
@@ -221,6 +221,12 @@ hr {
   &.well-no-padding-x {
     padding-left: 0;
     padding-right: 0;
+
+    @media (max-width: 768px) {
+      .flash-messages {
+        margin-top: -20px;
+      }
+    }
   }
 }
 
